# opengl_expore

./: CMakeLists.txt  glad.c  main.cpp  readme.txt  run  test_shader.glsl
glad/: glad.h
old_stuff/: main.cpp  rect.cpp  triforce.cpp  two_triangles_side_by_side_EBO.cpp
